tests/base/invalid/RealDiv_CompileFail_1.whiley


void ::main(System.Console sys):
    ls = [1,2,3]
    x = 2.0 / 1
    sys.out.println(Any.toString(ls)[x])
